--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "description": "Automation e2e framework with BDD",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jaime-contreras-98/playwright-bdd-todoist.git"
@@ -23,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/jaime-contreras-98/playwright-bdd-todoist/issues"
   },
-  "homepage": "https://github.com/jaime-contreras-98/playwright-bdd-todoist#readme"
+  "homepage": "https://github.com/jaime-contreras-98/playwright-bdd-todoist#readme",
+  "devDependencies": {
+    "@playwright/test": "^1.45.3",
+    "@types/node": "^20.14.12"
+  }
 }
